--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "orientation": "landscape",
   "scope": "/",
   "short_name": "IsraniCUE",
-  "start_url": "/unlocked.html",
+  "start_url": "/",
   "theme_color": "#ffffff",
   "categories": [],
   "screenshots": [
